//
//  AccessibilityIdentifiers.swift
//  OLX
//
//  Created by Jake Enzien on 3/21/17.
//  Copyright © 2017 Jacob Enzien. All rights reserved.
//

import Foundation

enum AccessibilityIdentifiers: String {
    
    case searchViewController = "SearchViewController"
    case detailsViewMoreButton = "DetailsViewMoreButton"
    case navigationBar = "NavigationBar"
}
